--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">TwentyOne</string>
-    <string name="hello_world">Testing</string>
+    <string name="hello_world">Play Twenty One</string>
     <string name="action_settings">Settings</string>
+    <string name="deal_button">Deal</string>
 </resources>
