--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,5 @@
     <string name="stand">STAND</string>
     <string name="dealer_result_text"></string>
     <string name="player_result_text"></string>
-
+    <string name="result_text"></string>
 </resources>
