--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">CrapJack</string>
-    <string name="welcome_text">Where the player always wins...</string>
+    <string name="app_name">KyleJack</string>
+    <string name="welcome_text"> K Y L E J A C K </string>
     <string name="action_settings">Settings</string>
     <string name="hit">HIT</string>
     <string name="stand">STAND</string>
