--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,13 @@
 <resources>
     <string name="app_name">KyleJack</string>
-    <string name="welcome_text"> K Y L E J A C K </string>
+    <string name="welcome_text"> ~ K Y L E J A C K ~ </string>
     <string name="action_settings">Settings</string>
     <string name="hit">HIT</string>
     <string name="stand">STAND</string>
     <string name="dealer_result_text"></string>
     <string name="player_result_text"></string>
     <string name="result"></string>
+    <string name="say_hello">Services</string>
+    <string name="give_pity">o(^`>^)o Waiter</string>
+    <string name="cash_out">£££ Cash Out £££</string>
 </resources>
