--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="dealer_result_text"></string>
     <string name="player_result_text"></string>
     <string name="result"></string>
+    <string name="hand_display"></string>
     <string name="say_hello">Services</string>
     <string name="give_pity">o(^`>^)o Waiter</string>
     <string name="cash_out">£££ Cash Out £££</string>
