--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">KyleJack</string>
-    <string name="welcome_text"> ~ K Y L E J A C K ~ </string>
+    <string name="app_name"> T W E N T Y O N E </string>
+    <string name="welcome_text"></string>
     <string name="action_settings">Settings</string>
     <string name="hit">HIT</string>
     <string name="stand">STAND</string>
@@ -12,4 +12,5 @@
     <string name="give_pity">o(^`>^)o Waiter</string>
     <string name="cash_out">£££ Cash Out £££</string>
     <string name="player_hand"></string>
+    <string name="dealer_hand_display"></string>
 </resources>
