removed default action bar improved size of app layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name"> T W E N T Y O N E </string>
+    <string name="app_name"> ~ T W E N T Y ~ O N E ~ </string>
     <string name="welcome_text"></string>
     <string name="action_settings">Settings</string>
     <string name="hit">HIT</string>
